--- a/style.css
+++ b/style.css
@@ -499,9 +499,13 @@ footer .copyright {
   margin-top: 50px;
 }
 
-@media (max-width:799px){
+@media (max-width:1024px){
   .section-p1{
-    margin: 40px 40px;
+    margin: 40px 115px;
+  }
+
+  footer{
+    display: grid;
   }
 
   #navbar{
@@ -513,7 +517,7 @@ footer .copyright {
     top: 0;
     right: -300px;
     height: 100vh;
-    width: 300px;
+    width: 60%;
     background-color: #E3E6F3;
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 80px 0 0 10px;
@@ -553,9 +557,9 @@ footer .copyright {
   }
 
   #hero {
-    height: 90vh;
-    padding: 0 80px;
-    background-position: top 30% right 30% ;
+    height: 50vh;
+    padding: 0 50px;
+    background-position: top 100% left 0% ;
   }
 
   #feature {
@@ -567,62 +571,318 @@ footer .copyright {
   }
 
   #sm-banner .banner-box {
+    display: flex;
     min-width: 100%;
-    height: 35vh;
-    padding: 30px;
-  }
-}
-
-@media (max-width:477px){
-  .section-p1{
-    padding: 20px;
-  }
-
-  #header{
-    padding: 10px 30px;
-  }
-  
-  h1{
-    font-size: 38px;
-  }
-
-  h2{
-    font-size: 32px;
-  }
-
-  #hero{
-    padding: 0 20px;
-    background-position: 55%;
-  }
-
-  #hero h4,
-  #hero p{
-    color: #222;
-  }
-
-  #hero h2{
-    color: #0361a9;
-  }
-
-  #feature{
-    justify-content: space-between;
-  }
-
-  #feature .fe-box{
-    width: 155px;
-    margin: 0 0 15px 0;  
-  }
-
-  #sm-banner .banner-box{
     height: 40vh;
-    width: 100%;
+    padding: 50px;
+  }
+
+  #sm-banner {
+    display: contents;
   }
 
   #sm-banner .b2{
-    margin-top: 20px;
+    margin: 10px 0px;
   }
 
-  footer .copyright{
-    text-align: start;
+  #header{
+    padding: 20px 40px;
+  }
+
+  .container {
+    margin: 0 12.5%;
+    padding: 2rem 5%;
+    width: 40vh;
+  }
+}
+
+@media (max-width:500px){
+  .section-p1{
+    margin: 40px 15px;
+  }
+
+  footer{
+    display: grid;
+  }
+
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 60%;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i{
+    color: #1a1a1a;
+    font-size:  24px;
+    padding-left: 20px;
+  }
+
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag,
+  #lg-acc{
+    display: none;
+  }
+
+  #hero {
+    height: 40vh;
+    padding: 0 50px;
+    background-position: top 100% left 10% ;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #sm-banner .banner-box {
+    display: flex;
+    min-width: 100%;
+    height: 40vh;
+    padding: 50px;
+  }
+
+  #sm-banner {
+    display: contents;
+  }
+
+  #sm-banner .b2{
+    margin: 10px 0px;
+  }
+
+  .container {
+    margin: 0 12.5%;
+    padding: 2rem 5%;
+    width: 40vh;
+  }
+
+  #header{
+    padding: 20px 20px;
+  }
+}
+
+@media (max-width:400px){
+  .section-p1{
+    margin: 40px 60px;
+  }
+
+  footer{
+    display: grid;
+  }
+
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 60%;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i{
+    color: #1a1a1a;
+    font-size:  24px;
+    padding-left: 20px;
+  }
+
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag,
+  #lg-acc{
+    display: none;
+  }
+
+  #hero {
+    height: 50vh;
+    padding: 0 50px;
+    background-position: top 100% left 10% ;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #sm-banner .banner-box {
+    display: flex;
+    min-width: 100%;
+    height: 40vh;
+    padding: 50px;
+  }
+
+  #sm-banner {
+    display: contents;
+  }
+
+  #sm-banner .b2{
+    margin: 10px 0px;
+  }
+
+  .container {
+    margin: 0 12.5%;
+    padding: 2rem;
+    width: 40vh;
+  }
+
+  #header{
+    padding: 20px 20px;
+  }
+}
+
+@media (max-width:350px){
+  .section-p1{
+    margin: 40px 15px;
+  }
+
+  footer{
+    display: grid;
+  }
+
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 60%;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i{
+    color: #1a1a1a;
+    font-size:  24px;
+    padding-left: 20px;
+  }
+
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag,
+  #lg-acc{
+    display: none;
+  }
+
+  #hero {
+    height: 50vh;
+    padding: 0 50px;
+    background-position: top 100% left 10% ;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #sm-banner .banner-box {
+    display: flex;
+    min-width: 100%;
+    height: 40vh;
+    padding: 50px;
+  }
+
+  #sm-banner {
+    display: contents;
+  }
+
+  #sm-banner .b2{
+    margin: 10px 0px;
+  }
+
+  .container {
+    margin: 0 12.5%;
+    padding: 2rem;
+    width: 40vh;
+  }
+
+  #header{
+    padding: 20px 20px;
   }
 }
