--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ button.white{
 /*----------------------*/
 #sm-banner{
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -499,7 +499,7 @@ footer .copyright {
   margin-top: 50px;
 }
 
-@media (max-width:1024px){
+@media (max-width:1640px){
   .section-p1{
     margin: 40px 115px;
   }
